# core

./: .gitignore  README.md  generate.py  pyproject.toml  test.py
core/: __init__.py  barometer.py  main.py  radio.py
core/utils/: i2c_bit.py  i2c_bits.py  i2c_struct.py  queue.py  typing.py
scripts/: build.py  install.py  pyboard.py  upload.py
tests/: test_gps.py
typings/: _typeshed.pyi  array.pyi  bluetooth.pyi  btree.pyi  cmath.pyi  collections.pyi  cryptolib.pyi  errno.pyi  esp.pyi  esp32.pyi  framebuf.pyi  gc.pyi  hashlib.pyi  heapq.pyi  io.pyi  json.pyi  lcd160cr.pyi  lsm9ds1.pyi  machine.ADCWiPy.pyi  machine.TimerWiPy.pyi  machine.pyi  math.pyi  micropython.pyi  neopixel.pyi  network.pyi  os.pyi  pyb.pyi  random.pyi  select.pyi  socket.pyi  ssl.pyi  stm.pyi  struct.pyi  sys.pyi  time.pyi  uarray.pyi  uasyncio.pyi  ubinascii.pyi  ubluetooth.pyi  ucollections.pyi  (+11 more)
unused/: accelerometer.py  datetime.py  gps.py  i2c_device.py  itertools.py  queue.py  radio.py  sd.py  spi_device.py
